# AMR-term-project

./: CMakeLists.txt  README.md  airlab_cage.bt  drone_setup.sh  package.xml
.cache/clangd/index/: bezier_spline.cpp.27570FC6843CEE3B.idx  bezier_spline.hpp.176A59A2B4DF0375.idx  compound_trajectory.cpp.0AA569B018B48F42.idx  compound_trajectory.hpp.C01CD25C7BCC3CA2.idx  linear_trajectory.cpp.6B024F33F067E368.idx  linear_trajectory.hpp.6D29FB2FE9379192.idx  math.cpp.1C27EFC4284468BF.idx  math.hpp.672A4CD93BCD08DD.idx  mission.cpp.F58FE33E2572003C.idx  mission.hpp.69D6FD6BCA2A23E9.idx  mission_manager.cpp.7C20E1BAEF9D13E4.idx  pid_controller.cpp.8A19272F21161C1C.idx  rrt.cpp.7721BC5287D894C0.idx  transformlistener.cpp.D36703E74DFB27A4.idx  transformlistener.hpp.A86A3F8B77F9F718.idx  utils.hpp.703799A378DCE244.idx
cmake/: add_ros_executable.cmake
config/: waypoints.csv  waypoints.yaml
data/: airlab_cage.bt  airlab_cage_no_wall.bt
include/: bezier_spline.hpp  compound_trajectory.hpp  linear_trajectory.hpp  mission.hpp  octomap.hpp  pid_controller.hpp  rrt.hpp  rrt_builder.hpp  transformlistener.hpp  voxelstatus.hpp
include/utils/: common_headers.hpp  eigen.hpp  math.hpp  random.hpp  rosparam.hpp  rviz.hpp  state.hpp  time.hpp  transform.hpp  utils.hpp
launch/: mavros_px4.launch  mission.launch  octomap_server.launch  rrt_service.launch  rviz.launch  sim.launch
libs/kdtree/: CMakeLists.txt
msg/: ControllerStateStamped.msg  Error.msg
patches/: ubuntu-18.04.patch
rviz/: path.rviz
scripts/: launch_sim.sh  run.sh
src/: bezier_spline.cpp  compound_trajectory.cpp  create_octomap_of_airlab_cage.cpp  linear_trajectory.cpp  math.cpp  mission.cpp  pid_controller.cpp  rrt.cpp  transformlistener.cpp
src/nodes/: control_manager.cpp  map_to_odom_tf_broadcaster.cpp  mission_manager.cpp  pid_controller.cpp  rrt_service.cpp  set_point_node.cpp
